k8s/01-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ticketing-platform
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata:
      labels: { app: redis }
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            exec: { command: ["redis-cli", "ping"] }
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ticketing-platform
spec:
  selector: { app: redis }
  ports:
    - port: 6379
      targetPort: 6379
